"ChangeLog"

2005-08-06	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-53-unique-01-06:
	  Added state manager, whose responsibility is managing 
		the global state pools (static member pools in various
		state_instance classes).
	  Implemented dumping of created state, just prints canonical alias.  
	  Implemented creation state persistence.  
	  Enabled unique state creation! (without recursion)
		So far basic tests look good, but no connections 
		have been tested yet.  
	  Corrected initialization of instance_pool constructor, 
		call set_chunk_size rather than pass to parent ctor.  
		Implemented an allocate that takes a value to assign.  
	  TODO: test cases with alias connections.  


	* ARTXX-00-01-04-main-00-53-unique-01-05:
	  Added Object/inst/instance_pool.{h,tcc}:
		wrapper around util::list_vector for state allocation.  
		Result of ::allocate is an index into the list_vector.
	  Added Object/inst/state_instance.{h,tcc}:
		Template class from which state instances are defined.  
	  Redefined  *_instance classes (in Object/inst/*_instance_collection.h)
		in terms of state_instance template class.  
	  Updated instance_alias_info<>::allocate_state to use
		instance_pool's allocation.  


2005-08-05	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-53-unique-01-04:
	  Update all *_instance classes: no longer derived from persistent
		because they will be managed differently.  
	  instance_alias_info's instance (ref-count) pointer has been 
		replaced with an integer index for indexing into 
		allocation array of state info (pool).  
		Binary object sizes remain the same because 
		sizeof(size_t) == sizeof(pointer).
	  Implemented back-reference saving and restoring for all instances.  
	  TODO: allocate and link instances to state.  
	  TODO: introduce static global list_vector pools for allocation.  
	  TODO: save and restore global state.  


	* ARTXX-00-01-04-main-00-53-unique-01-03: